feature: publish collect stocks to a nats server

--- a/config/sentinel_sample.env
+++ b/config/sentinel_sample.env
@@ -1,1 +1,5 @@
-ALPHAVANTAGE_KEY=000000000                   # AlphaVantage key. More on https://www.alphavantage.co/
+# NATS configs
+NATS_STOCKS_DATA_URI=nats://stocks_nats:4222    # NATS URI - responsible for publishing collected stocks data
+
+# Stock providers
+ALPHAVANTAGE_KEY=000000000                      # AlphaVantage key. More on https://www.alphavantage.co/
