--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,25 @@
 version: '3.6'
 services:
+  stocks_nats:
+    container_name: "sentinel-stocks-nats"
+    entrypoint: "/gnatsd -DV"
+    expose:
+      - "4222"
+    hostname: "nats-server"
+    image: "nats:1.4.1"
+    ports:
+      - "8222:8222"
+      - "4222:4222"
   app:
     container_name: "sentinel"
+    depends_on:
+      - stocks_nats
     env_file:
       - config/sentinel.env
     image: "sentinel:latest"
-    volumes:
-      - "./:/go/src/github.com/pedrolopesme/sentinel"
+    links:
+      - stocks_nats
     ports:
       - "3030:3030"
+    volumes:
+      - "./:/go/src/github.com/pedrolopesme/sentinel"
