feature: migrate from NATS to NATS Streaming

--- a/config/sentinel_sample.env
+++ b/config/sentinel_sample.env
@@ -1,5 +1,6 @@
 # NATS configs
 NATS_STOCKS_DATA_URI=nats://stocks_nats:4222    # NATS URI - responsible for publishing collected stocks data
+NATS_STOCKS_CLUSTERID=stocks-cluster            # NATS Stocks Streaming cluster ID
 
 # Stock providers
 ALPHAVANTAGE_KEY=000000000                      # AlphaVantage key. More on https://www.alphavantage.co/
