--- a/config/sentinel_sample.env
+++ b/config/sentinel_sample.env
@@ -1,6 +1,17 @@
-# NATS configs
-NATS_STOCKS_DATA_URI=nats://stocks_nats:4222    # NATS URI - responsible for publishing collected stocks data
-NATS_STOCKS_CLUSTERID=stocks-cluster            # NATS Stocks Streaming cluster ID
+####################################
+# Messaging Configs
+####################################
 
-# Stock providers
-ALPHAVANTAGE_KEY=000000000                      # AlphaVantage key. More on https://www.alphavantage.co/
+# NATS Stocks Streaming Cluster ID
+NATS_STOCKS_CLUSTERID=test-cluster
+
+# NATS URI - responsible for publishing collected stocks data
+NATS_STOCKS_DATA_URI=nats://stocks_nats:4222
+
+
+####################################
+# Stock Price Providers Configs
+####################################
+
+# AlphaVantage key. More on https://www.alphavantage.co/
+ALPHAVANTAGE_KEY=000000000
