config: add integration to sonarcloud

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,20 @@ go:
   - "1.12.x"
   - master
 
+addons:
+  sonarcloud:
+    organization: "pedrolopesme-github"
+
+install:
+  - go get -u gopkg.in/alecthomas/gometalinter.v2
+  - $GOPATH/bin/gometalinter.v2 --install
+
 script:
-  - make test
+  - $GOPATH/bin/gometalinter.v2 samples/ > gometalinter-report.out || true
+  - go test -json -v ./... > report.json
+  - go test -coverprofile=coverage.out -v ./...
+  - sonar-scanner
+
+cache:
+  directories:
+    - '$HOME/.sonar/cache'
